fixed bio scroll issue on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -138,8 +138,7 @@ code {
 		padding: 0;
 	}
 	.siteBodyInner {
-		/* padding: 50px 0; */
-		padding: 50px 5px;
+		padding: 50px 5px 0px 5px;
 		height: 80vh;
 	}
 	.bioInner {
@@ -149,7 +148,8 @@ code {
 		letter-spacing: 1.5px;
 		height: 74vh;
 		overflow-y: auto;
-		padding-bottom: 60px;
-		/* margin-bottom: 63vh; */
+	}
+	.bioBody {
+		padding-bottom: 90px;
 	}
 } 
